--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>net.awired.jaxrs.oauth2</groupId>
+	<groupId>fr.norad.jaxrs.oauth2</groupId>
 	<artifactId>jaxrs-oauth2</artifactId>
 	<packaging>jar</packaging>
 	<name>Jaxrs oauth2</name>
@@ -10,15 +10,15 @@
     <version>0.5-SNAPSHOT</version>
 
     <parent>
-        <groupId>net.awired.parent</groupId>
+        <groupId>fr.norad.parent</groupId>
         <artifactId>parent-java</artifactId>
-        <version>1.16</version>
+        <version>1.17-SNAPSHOT</version>
     </parent>
 
     <scm>
-        <connection>scm:git:git://github.com/awired/jaxrs-oauth2.git</connection>
-        <developerConnection>scm:git:git@github.com:awired/jaxrs-oauth2.git</developerConnection>
-        <url>https://github.com/awired/jaxrs-oauth2</url>
+        <connection>scm:git:git://github.com/n0rad/jaxrs-oauth2.git</connection>
+        <developerConnection>scm:git:git@github.com:n0rad/jaxrs-oauth2.git</developerConnection>
+        <url>https://github.com/n0rad/jaxrs-oauth2</url>
         <tag>HEAD</tag>
     </scm>
 
