--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>fr.norad.parent</groupId>
         <artifactId>parent-java</artifactId>
-        <version>1.17-SNAPSHOT</version>
+        <version>1.18</version>
     </parent>
 
     <scm>
@@ -30,6 +30,12 @@
 			<version>3.2.1.RELEASE</version>
 		</dependency>
 
+<!--        <dependency> -->
+<!--            <groupId>org.springframework.security</groupId> -->
+<!--            <artifactId>spring-security-core</artifactId> -->
+<!--            <version>3.1.3.RELEASE</version> -->
+<!--            <optional>true</optional> -->
+<!--        </dependency> -->
 
 		<!-- <dependency> -->
 		<!-- <groupId>org.springframework.security</groupId> -->
