--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fr.norad.jaxrs.oauth2</groupId>
 	<artifactId>jaxrs-oauth2</artifactId>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 	<name>Jaxrs oauth2</name>
 	<description>Full jax-rs security using oauth2</description>
     <version>0.5-SNAPSHOT</version>
@@ -22,44 +22,82 @@
         <tag>HEAD</tag>
     </scm>
 
+    <modules>
+        <module>api</module>
+    </modules>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>3.2.1.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>fr.norad.core</groupId>
+                <artifactId>core</artifactId>
+                <version>0.8-SNAPSHOT</version>
+            </dependency>
+
+            <!--        <dependency> -->
+            <!--            <groupId>org.springframework.security</groupId> -->
+            <!--            <artifactId>spring-security-core</artifactId> -->
+            <!--            <version>3.1.3.RELEASE</version> -->
+            <!--            <optional>true</optional> -->
+            <!--        </dependency> -->
+
+            <!-- <dependency> -->
+            <!-- <groupId>org.springframework.security</groupId> -->
+            <!-- <artifactId>spring-security-web</artifactId> -->
+            <!-- <version>3.1.3.RELEASE</version> -->
+            <!-- </dependency> -->
+            <!-- <dependency> -->
+            <!-- <groupId>javax.servlet</groupId> -->
+            <!-- <artifactId>javax.servlet-api</artifactId> -->
+            <!-- <version>3.0.1</version> -->
+            <!-- </dependency> -->
+
+            <dependency>
+                <groupId>org.apache.cxf</groupId>
+                <artifactId>cxf-rt-frontend-jaxrs</artifactId>
+                <version>2.7.5</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.7.2</version>
+            </dependency>
+        </dependencies>
+
+    </dependencyManagement>
+
 	<dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>0.11.8</version>
+            <scope>provided</scope>
+        </dependency>
 
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
-			<version>3.2.1.RELEASE</version>
-		</dependency>
-
-<!--        <dependency> -->
-<!--            <groupId>org.springframework.security</groupId> -->
-<!--            <artifactId>spring-security-core</artifactId> -->
-<!--            <version>3.1.3.RELEASE</version> -->
-<!--            <optional>true</optional> -->
-<!--        </dependency> -->
-
-		<!-- <dependency> -->
-		<!-- <groupId>org.springframework.security</groupId> -->
-		<!-- <artifactId>spring-security-web</artifactId> -->
-		<!-- <version>3.1.3.RELEASE</version> -->
-		<!-- </dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>javax.servlet</groupId> -->
-		<!-- <artifactId>javax.servlet-api</artifactId> -->
-		<!-- <version>3.0.1</version> -->
-		<!-- </dependency> -->
-
-		<dependency>
-			<groupId>org.apache.cxf</groupId>
-			<artifactId>cxf-rt-frontend-jaxrs</artifactId>
-			<version>2.7.5</version>
-		</dependency>
-
-
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.2</version>
-		</dependency>
+        <!-- TESTS -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.easytesting</groupId>
+            <artifactId>fest-assert-core</artifactId>
+            <version>2.0M8</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.0-rc1</version>
+            <scope>test</scope>
+        </dependency>
 
 	</dependencies>
 </project> 
