add httpStatus annotation

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -16,5 +16,9 @@
             <groupId>fr.norad.core</groupId>
             <artifactId>core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+        </dependency>
     </dependencies>
 </project> 
