--- a/pom.xml
+++ b/pom.xml
@@ -27,15 +27,15 @@
 
     <dependencyManagement>
         <dependencies>
-            <dependency>
+<!--            <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
                 <version>3.2.1.RELEASE</version>
-            </dependency>
+            </dependency>-->
             <dependency>
                 <groupId>fr.norad.core</groupId>
                 <artifactId>core</artifactId>
-                <version>0.9-SNAPSHOT</version>
+                <version>0.9</version>
             </dependency>
 
             <!--        <dependency> -->
@@ -56,11 +56,11 @@
             <!-- <version>3.0.1</version> -->
             <!-- </dependency> -->
 
-            <dependency>
+       <!--     <dependency>
                 <groupId>org.apache.cxf</groupId>
                 <artifactId>cxf-rt-frontend-jaxrs</artifactId>
                 <version>2.7.5</version>
-            </dependency>
+            </dependency>-->
             <dependency>
                 <groupId>javax.ws.rs</groupId>
                 <artifactId>javax.ws.rs-api</artifactId>
