--- a/api/pom.xml
+++ b/api/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>fr.norad.jaxrs.oauth2</groupId>
         <artifactId>jaxrs-oauth2</artifactId>
-        <version>0.7</version>
+        <version>0.8-SNAPSHOT</version>
     </parent>
 
     <dependencies>
